<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Aplicativo lista VIP devandroid.kenede.applistacurso.model.Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hit_edit_nome_do_curso">Nome do devandroid.kenede.applistacurso.model.Curso Desejado</string>
    <string name="txt_hit_edit_telefone_contato">Telefone de contato</string>
    <string name="txt_botton_limpar">LIMPAR</string>
    <string name="txt_botton_salvar">SALVAR</string>
    <string name="txt_botton_finalizar">FINALIZAR</string>

</resources>